static docs
skip-ci]
